@@ -1,3 +1,8 @@
+2013-02-06  Miklos Szeredi <miklos@szeredi.hu>
+
+	* libfuse: set close-on-exec flag on pipe file descriptors.  Patch
+	by Eric Wong
+
 2013-02-05  Miklos Szeredi <miklos@szeredi.hu>
 
 	* libfuse: fix fuse_get_context() in non fuse threads.  Reported
